# linear-regression

./: pyproject.toml  readme.md  regression.ipynb
.ipynb_checkpoints/: data_p-checkpoint.csv  healthFitness-checkpoint.csv  insurabce-checkpoint.csv  regression-checkpoint.ipynb
