[tool.poetry]
name = "linear-regressionv"
version = "0.1.0"
description = ""
authors = ["farahzuot <farahz997@eng.hu.edu.jo>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.5"
numpy = "^1.19.4"
sklearn = "^0.0"
matplotlib = "^3.3.3"
jupyterlab = "^2.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
